--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,12 @@
+// Specify process-level configuration
+process {
+    executor = 'sge'
+    penv = 'omp'
+    // aramp10 edit: Add your SCC project here
+    clusterOptions = '-P ar-rcs'
+    beforeScript = 'source $HOME/.bashrc'
+}
+
 manifest {
     name                                  = 'mtDNA-Server 2'
     version                               = 'v2.1.16'
