--- a/nextflow.config
+++ b/nextflow.config
@@ -59,7 +59,9 @@ includeConfig 'conf/base.config'
 profiles {
     debug { process.beforeScript          = 'echo $HOSTNAME' }
 
-    process.container                 = 'quay.io/genepi/mtdna-server-2:v2.1.16'
+    // aramp10 edit: point to the locally built container
+    // process.container                 = 'quay.io/genepi/mtdna-server-2:v2.1.16'
+    process.container                 = '/projectnb/ar-rcs/client/nmf35/INC20738179_Nextflow/mtdna-server-2/containers/
     docker.enabled                    = true
     singularity.enabled               = false
 
