Fix path to container

--- a/nextflow.config
+++ b/nextflow.config
@@ -61,7 +61,7 @@ profiles {
 
     // aramp10 edit: point to the locally built container
     // process.container                 = 'quay.io/genepi/mtdna-server-2:v2.1.16'
-    process.container                 = '/projectnb/ar-rcs/client/nmf35/INC20738179_Nextflow/mtdna-server-2/containers/
+    process.container                 = '/projectnb/ar-rcs/client/nmf35/INC20738179_Nextflow/mtdna-server-2/containers/mtdna-server-2-v2.1.16.sif'
     docker.enabled                    = true
     singularity.enabled               = false
 
