Specify SCC for process-level configuration
Updated configuration to specify SCC for process execution.

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,4 @@
-// Specify process-level configuration
+// Specify process-level configuration to run on the BU SCC
 process {
     executor = 'sge'
     penv = 'omp'
